--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,41 @@
   left: 5rem;
   position: absolute;
 }
+
+.movies-list {
+  display: flex;
+  padding: 1rem;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+.movie-card {
+  border: 1px solid black;
+  background-color: gray;
+  position: relative;
+  height: 15rem;
+}
+.card-title {
+  position: absolute;
+  color: white;
+  left: 1rem;
+  z-index: 1;
+  top: 0;
+}
+.movie-card-button {
+  /* position: absolute;
+  bottom: 2rem;
+  left: 8rem; */
+}
+
+.card_div {
+  position: absolute;
+  bottom: 1rem;
+  left: 0;
+  width: 100%;
+}
+.Home_pagination {
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+}
