--- a/src/App.css
+++ b/src/App.css
@@ -37,14 +37,6 @@
 .card-title {
   position: absolute;
   color: white;
-  left: 1rem;
-  z-index: 1;
-  top: 0;
-}
-.movie-card-button {
-  /* position: absolute;
-  bottom: 2rem;
-  left: 8rem; */
 }
 
 .card_div {
@@ -57,4 +49,7 @@
   display: flex;
   justify-content: center;
   padding: 1rem;
+}
+.active {
+  background-color: red;
 }
